--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,19 +2,7 @@
 <%= @tasks.id %>
  のタスクの編集ページ</h1>
 
-<%= form_for(@tasks) do |f| %>
-
-  
-<%= f.label :content, 'タスク' %>
-
-  
-<%= f.text_field :content %>
-
-
-  
-<%= f.submit '追加' %>
-
-<% end %>
+<%= render 'form',tasks:@tasks %>
 
 
 <%= link_to 'タスク一覧に戻る',tasks_path %>
