--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,18 +1,6 @@
 <h1>タスク新規追加ページ</h1>
 
-<%= form_for(@tasks) do |f| %>
-
-  
-<%= f.label :content, 'タスク' %>
-
-  
-<%= f.text_field :content %>
-
-
-  
-<%= f.submit '追加' %>
-
-<% end %>
+<%= render 'form',tasks:@tasks %>
 
 
 <%= link_to 'タスク一覧に戻る', tasks_path %>
