--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,26 +1,28 @@
-<%= form_for(tasks) do |f| %>
+<div class="row">
+  <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6"></div>
+  <%= form_for(tasks) do |f| %>
 
   <% if tasks.errors.any? %>
-    <div id ="error_explanation">
-      <ul>
-        <% tasks.errors.full_messages.each do |tasks| %>
-        <li>
+    <div class="alert alert-warning">
+      <div id ="error_explanation">
+         <ul>
+          <% tasks.errors.full_messages.each do |tasks| %>
+         <li>
           <%= tasks %>
-        </li>
+         </li>
   <% end %>    
       </ul>
     <div>
   
 <% end %>
-<%= f.label :content, 'タスク' %>
-
-  
-<%= f.text_field :content %>
-
-<%= f.label :status, 'ステータス' %>
-
-<%= f.text_field :status %>
-
+<div class="form-group">
+  <%= f.label :content, 'タスク' %>
+  <%= f.text_field :content %>
+</div>
+<div class="form-group">
+  <%= f.label :status, 'ステータス' %>
+  <%= f.text_field :status %>
+</div>
 
   
 <%= f.submit '追加' %>
